[wip] send thing events directly to search updater shard region.
Signed-off-by: Yufei Cai <yufei.cai@bosch.io>