@@ -147,11 +147,12 @@ final class ThingsUpdater extends AbstractActorWithTimers {
         final Set<String> currentShardIds = stats.getStats().keySet();
         log.debug("Updating event subscriptions: <{}> -> <{}>", previousShardIds, currentShardIds);
         final List<String> toSubscribe =
-                currentShardIds.stream().filter(s -> !previousShardIds.contains(s)).collect(Collectors.toList());
+                currentShardIds.stream().filter(s -> !previousShardIds.contains(s)).toList();
         final List<String> toUnsubscribe =
-                previousShardIds.stream().filter(s -> !currentShardIds.contains(s)).collect(Collectors.toList());
-        thingEventSub.subscribeWithoutAck(toSubscribe, getSelf());
-        thingEventSub.unsubscribeWithoutAck(toUnsubscribe, getSelf());
+                previousShardIds.stream().filter(s -> !currentShardIds.contains(s)).toList();
+        // TODO
+        // thingEventSub.subscribeWithoutAck(toSubscribe, getSelf());
+        // thingEventSub.unsubscribeWithoutAck(toUnsubscribe, getSelf());
         previousShardIds = currentShardIds;
     }
 
